--- a/eureka-client/src/main/resources/bootstrap.properties
+++ b/eureka-client/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
-spring.application.name=a-bootiful-client
+spring.application.name=eureka-client
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
-server.port=8300	
+server.port=8500	
